# claude-snap

./: .gitignore  LICENSE  PLUGIN.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: pages.yml
claude_snap/: __init__.py  cli.py  codec.py  serve.py  sessions.py
claude_snap/web/: app.js  codec.js  index.html  manifest.json  styles.css  sw.js
commands/: snap-pack.md  snap-share.md  snap-stats.md  snap.md
ctxport/: __init__.py  __main__.py  cli.py  codec.py  schema.py
docs/: SECURITY.md  app.js  index.html  styles.css
examples/: synthetic_session.jsonl
tests/: test_codec.py  test_sessions.py
