[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxport"
version = "0.1.0"
description = "Lossless structural codec for Claude Code session JSONLs — portable conversation snapshots that move between devices."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ctxport contributors" }
]
requires-python = ">=3.9"
keywords = [
  "claude", "claude-code", "agentic", "jsonl",
  "codec", "compression", "context", "portability",
  "fork-session",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]
publish = ["build>=1.0", "twine>=4.0"]

[project.scripts]
ctxport = "ctxport.cli:main"

[project.urls]
Homepage = "https://github.com/achiii800/ctxport"
Source = "https://github.com/achiii800/ctxport"
Issues = "https://github.com/achiii800/ctxport/issues"

[tool.setuptools.packages.find]
include = ["ctxport*"]
exclude = ["tests*", "examples*"]
