[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-snap"
version = "0.4.1"
description = "Lossless structural codec for Claude Code session JSONLs — portable conversation snapshots that move between devices, plus a built-in localhost chat surface that keeps your API key out of the browser."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "claude-snap contributors" }
]
requires-python = ">=3.9"
keywords = [
  "claude", "claude-code", "agentic", "jsonl",
  "codec", "compression", "context", "portability",
  "fork-session", "pwa",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "build>=1.0"]
publish = ["build>=1.0", "twine>=4.0"]
completion = ["argcomplete>=3.0"]

[project.scripts]
claude-snap = "claude_snap.cli:main"

[project.urls]
Homepage = "https://github.com/achiii800/claude-snap"
Source = "https://github.com/achiii800/claude-snap"
Issues = "https://github.com/achiii800/claude-snap/issues"
PWA = "https://achiii800.github.io/claude-snap/"

[tool.setuptools.packages.find]
include = ["claude_snap*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"claude_snap" = [
  "web/*.html",
  "web/*.js",
  "web/*.css",
  "web/*.json",
  "web/*.md",
  "web/*.png",
]
